data/derived/sp14/progs/unify/prog0711.ml.out
Characters 18-26:
  let g1 () = build (1,2, 2);;
                    ^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type (int * int -> int) * int
